syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message MemeInfo {
  uint32 pckId = 1;
  uint64 picId = 2;
  string picUrl = 3;
  string thumbnail = 4;
  uint32 width = 5;
  uint32 height = 6;
  string detailLink = 7;
}